openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yeti-tracker
  labels:
    app: yeti-tracker
