openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yeti-tracker
  namespace: yeti-tracker
  labels:
    app: yeti-tracker
spec:
  type: ClusterIP
  selector:
    app: yeti-tracker
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
